# postgres_lsp

./: .gitignore  Cargo.toml  biome.jsonc  cliff.toml  flake.nix  justfile
.github/workflows/: publish.reusable.yml  pull_request.yml  release.yml
crates/pgt_cli/src/: cli_options.rs
crates/pgt_cli/src/commands/: mod.rs
crates/pgt_cli/src/execute/: mod.rs
crates/pgt_completions/: Cargo.toml
crates/pgt_completions/benches/: sanitization.rs
crates/pgt_completions/src/: builder.rs  complete.rs  context.rs  item.rs  lib.rs  relevance.rs  sanitization.rs  test_helper.rs
crates/pgt_completions/src/providers/: columns.rs  functions.rs  helper.rs  mod.rs  schemas.rs  tables.rs
crates/pgt_completions/src/relevance/: filtering.rs  scoring.rs
crates/pgt_configuration/src/: database.rs  lib.rs
crates/pgt_lexer/src/: lib.rs
crates/pgt_lsp/src/: capabilities.rs  session.rs
crates/pgt_lsp/src/handlers/: code_actions.rs  completions.rs
crates/pgt_lsp/tests/: server.rs
crates/pgt_schema_cache/src/: lib.rs  schemas.rs
crates/pgt_statement_splitter/src/: lib.rs  parser.rs
crates/pgt_statement_splitter/src/parser/: common.rs  dml.rs
crates/pgt_statement_splitter/tests/data/: simple_union__4.sql
crates/pgt_text_size/src/: range.rs
crates/pgt_typecheck/src/: diagnostics.rs  lib.rs
crates/pgt_typecheck/tests/: diagnostics.rs
crates/pgt_workspace/: Cargo.toml
crates/pgt_workspace/src/: configuration.rs  settings.rs  workspace.rs
crates/pgt_workspace/src/features/: code_actions.rs  completions.rs
docs/schemas/latest/: schema.json
(+10 files in other folders)
