[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgt_completions"
repository.workspace = true
version              = "0.0.0"


[dependencies]
async-std = "1.12.0"

pgt_text_size.workspace = true


pgt_schema_cache.workspace       = true
pgt_treesitter_queries.workspace = true
schemars                         = { workspace = true, optional = true }
serde                            = { workspace = true, features = ["derive"] }
serde_json                       = { workspace = true }
tracing                          = { workspace = true }
tree-sitter.workspace            = true
tree_sitter_sql.workspace        = true

sqlx.workspace = true

tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
criterion                = "0.5.1"
pgt_test_utils.workspace = true

[lib]
doctest = false

[features]
schema = ["dep:schemars"]

[[bench]]
harness = false
name    = "sanitization"
